syntax = "proto3";

package main;

option go_package = "./proto";

// 添加会员信息
message RegisterReq {
  string nickname = 1; //昵称
  string mobile = 2; //手机号码
  int32 source = 3; //注册来源：0-PC，1-APP，2-小程序
  string password = 4; //密码
}

message RegisterResp {
  string token = 1;
}

// 删除会员信息
message DeleteMemberInfoReq {
  repeated int64 ids = 1;
}

message DeleteMemberInfoResp {
  string pong = 1;
}

// 更新会员信息
message UpdateMemberInfoReq {
  int64 id = 1; //主键ID
  string nickname = 2; //昵称
  string mobile = 3; //手机号码
  string avatar = 4; //头像
  string signature = 5; //个性签名
  int32 gender = 6; //性别：0-未知，1-男，2-女
  string birthday = 7; //生日
}

message UpdateMemberInfoResp {
  string pong = 1;
}

// 更新会员信息状态
message UpdateMemberInfoStatusReq {
  repeated int64 ids = 1; //主键ID
  int32 is_enabled = 22; //是否启用：0-禁用，1-启用
}

message UpdateMemberInfoStatusResp {
  string pong = 1;
}

// 查询会员信息详情
message QueryMemberInfoDetailReq {
  int64 member_id = 1; //会员ID
}

message QueryMemberInfoDetailResp {
  int64 id = 1; //主键ID
  int64 member_id = 2; //会员ID
  int64 level_id = 3; //等级ID
  string nickname = 4; //昵称
  string mobile = 5; //手机号码
  int32 source = 6; //注册来源：0-PC，1-APP，2-小程序
  string avatar = 8; //头像
  string signature = 9; //个性签名
  int32 gender = 10; //性别：0-未知，1-男，2-女
  string birthday = 11; //生日
  int32 growth_point = 12; //成长值
  int32 points = 13; //积分
  int32 total_points = 14; //累计获得积分
  float spend_amount = 15; //累计消费金额
  int32 order_count = 16; //订单数
  int32 coupon_count = 17; //优惠券数量
  int32 comment_count = 18; //评价数
  int32 return_count = 19; //退货数
  int32 lottery_times = 20; //剩余抽奖次数
  string last_login = 21; //最后登录
  int32 is_enabled = 22; //是否启用：0-禁用，1-启用
  string create_time = 23; //创建时间
  string update_time = 24; //更新时间

}

// 分页查询会员信息列表
message QueryMemberInfoListReq {
  int64 member_id = 1; //会员ID
  string nickname = 2; //昵称
  string mobile = 3; //手机号码
  int32 source = 4; //注册来源：0-PC，1-APP，2-小程序
  int32 is_enabled = 5; //是否启用：0-禁用，1-启用
  int32 page_num = 6; //第几页
  int32 page_size = 7; //每页的数量
}

message MemberInfoListData {
  int64 id = 1; //主键ID
  int64 member_id = 2; //会员ID
  int64 level_id = 3; //等级ID
  string nickname = 4; //昵称
  string mobile = 5; //手机号码
  int32 source = 6; //注册来源：0-PC，1-APP，2-小程序
  string avatar = 8; //头像
  string signature = 9; //个性签名
  int32 gender = 10; //性别：0-未知，1-男，2-女
  string birthday = 11; //生日
  int32 growth_point = 12; //成长值
  int32 points = 13; //积分
  int32 total_points = 14; //累计获得积分
  float spend_amount = 15; //累计消费金额
  int32 order_count = 16; //订单数
  int32 coupon_count = 17; //优惠券数量
  int32 comment_count = 18; //评价数
  int32 return_count = 19; //退货数
  int32 lottery_times = 20; //剩余抽奖次数
  string last_login = 21; //最后登录
  int32 is_enabled = 22; //是否启用：0-禁用，1-启用
  string create_time = 23; //创建时间
  string update_time = 24; //更新时间

}

message QueryMemberInfoListResp {
  int64 total = 1;
  repeated  MemberInfoListData list = 2;
}

message LoginReq {
  string      mobile = 1; //手机号码
  string      password = 2; //密码
  string      ip = 3; //登录IP
  int32      source = 4; //登录来源：0-PC，1-APP，2-小程序
}

message LoginResp {
  string Token = 1;
}

message UpdateMemberPointsReq {
  int64 member_id = 1; //会员ID
  int32 points = 2; //积分
}

message UpdateMemberPointsResp {
  string pong = 1;
}

// 会员信息
service MemberInfoService {
  // 注册会员信息
  rpc Register(RegisterReq) returns (RegisterResp){}
  // 删除会员信息
  rpc DeleteMemberInfo(DeleteMemberInfoReq) returns (DeleteMemberInfoResp){}
  // 更新会员信息
  rpc UpdateMemberInfo(UpdateMemberInfoReq) returns (UpdateMemberInfoResp){}
  // 更新会员信息状态
  rpc UpdateMemberInfoStatus(UpdateMemberInfoStatusReq) returns (UpdateMemberInfoStatusResp){}
  // 查询会员信息详情
  rpc QueryMemberInfoDetail(QueryMemberInfoDetailReq) returns (QueryMemberInfoDetailResp){}
  // 查询会员信息列表
  rpc QueryMemberInfoList(QueryMemberInfoListReq) returns (QueryMemberInfoListResp){}

  //会员登录
  rpc Login(LoginReq) returns(LoginResp);
  //更新会员积分
  rpc UpdateMemberPoints(UpdateMemberPointsReq) returns(UpdateMemberPointsResp);

}
